# email-dns-records-gen

./: .gitignore  Cargo.toml  README.md  compile_all.sh
examples/: records-gen.rs
src/: error.rs  lib.rs
src/generate/: mod.rs
