[package]
name = "gen"
version = "0.1.0"
description = "Email Security DNS Records Generator"
authors = ["Marirs <marirs@gmail.com>"]
keywords = ["dns", "dkim", "dmarc", "spf", "arc"]
categories = ["email"]
edition = "2021"

[dependencies]
ahash = "0.8.0"
ed25519-dalek = { version = "2.0", optional = true }
rsa = { version = "0.9.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha1 = { version = "0.10", features = ["oid"], optional = true }
sha2 = { version = "0.10.6", features = ["oid"], optional = true }
